--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
